name:                drawing
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , either
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Drawing
                     , Commands
                     , Parser

executable drawing
  hs-source-dirs:      main
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , drawing
                     , text

test-suite drawing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , drawing
                     , hspec
                     , mtl
                     , text
  other-modules:       DrawingSpec
                     , ParserSpec
